--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -12,11 +12,19 @@
   "dependencies": {
     "@types/inversify": "^2.0.33",
     "@types/node": "^14.14.21",
-    "chai": "^4.3.6",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "inversify": "^4.13.0",
     "mocha": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.0",
+    "@types/sinon": "^10.0.11",
+    "chai": "^4.3.6",
+    "sinon": "^13.0.2"
   }
 }
