--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "npx ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --require ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --require ts-node/register ./src/**/*.spec.ts",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix --max-warnings=0"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +26,12 @@
     "@types/mocha": "^9.1.0",
     "@types/sinon": "^10.0.11",
     "chai": "^4.3.6",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "sinon": "^13.0.2"
   }
 }
